--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+html, body {
+  overflow-x: hidden;  /* prevents scrolling horizontally */
+  margin: 0;
+  padding: 0;
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -24,9 +30,10 @@ a:hover {
 
 body {
   margin: 0;
-  min-width: 320px;
+  padding: 0;
+  min-width: 300px;
   min-height: 100vh;
-  padding-top: 60px;
+  padding-top: 80px;
 }
 
 h1 {
